Updated Significance section, quark gluon selection and added stolen chapters from Dijet note on limit setting

--- a/ANA-EXOT-2019-32-INT1-defs.sty
+++ b/ANA-EXOT-2019-32-INT1-defs.sty
@@ -109,10 +109,16 @@
 % QG Tagging Related
 \newcommand*{\ntrk}{\ensuremath{n_{\textrm{track}}}\xspace}
 \newcommand*{\nqg}{\ensuremath{n_{\textrm{qg}}}\xspace}
+\newcommand*{\nq}{\ensuremath{n_{\textrm{q}}}\xspace}
+\newcommand*{\ngluon}{\ensuremath{n_{\textrm{g}}}\xspace}
+
 \def\QQ{{\textbf{QQ}}}
 \def\QG{{\textbf{QG}}}
 \def\GG{{\textbf{GG}}}
 \def\JJ{{\textbf{JJ}}}
+\def\JG{{\textbf{JG}}}
+
+\def\e
 
 
 \def\s{\ensuremath{\sqrt{s}}}
@@ -120,6 +126,7 @@
 \def\Wprime{\ensuremath{W^\prime}}
 \def\Wstar{\ensuremath{W^\ast}}
 \def\Zprime{\ensuremath{Z^\prime}}
+\def\Hprime{\ensuremath{H^\prime}}
 \def\mjj{\ensuremath{m_{jj}}} %m_{12}}}
 \newcommand*{\QCD}{QCD\xspace}
 \def\qstar{\ensuremath{q^\ast}}
