Added chapter on Background Estimation and Pseudo data creation

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -41,6 +41,7 @@
 \usepackage{pdflscape}
 \usepackage{rotating}
 \usepackage{todonotes} % Add '[disable]' option to mask them
+\usepackage{xcolor}
 
 %-------------------------------------------------------------------------------
 % Style file with biblatex options for ATLAS documents.
@@ -119,6 +120,13 @@
 \input{include/QGselection.tex}
 \clearpage
 %-------------------------------------------------------------------------------
+
+\section{Background Estimation Strategy}
+%\label{sec:background_estimation}
+\input{include/04-BackgroundEstimation.tex}
+\clearpage
+
+
 
 
 \section{Search Strategy}
