Added Dengfeng Zhang

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -42,6 +42,7 @@
 \AtlasAuthorContributor{Katherine~Rybacki}{a}{q/g tagging systematics, sample production.}
 \AtlasAuthorContributor{Wanyun~Su}{g}{Checking analysis flow, data MC comparison.}
 \AtlasAuthorContributor{Changxu~Wei}{h}{Checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Dengfeng~Zhang}{b}{}
 \AtlasAuthorContributor{Yan~Zhou}{h}{Checking analysis flow, data MC comparison.}
 % \AtlasContributor{.}
 % \author[a]{Iain Bertram}
